--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -329,62 +329,55 @@ SHARE
   padding-right: 4px;
   font-size: 10pt;
 }
-table.xyz-item > tr.xyz-item-selected.xyz-item-header {
-  background-color: yellow;
-  color: black;
+
+#xyz-share-popup {
+  position: fixed;
+  left: 50vw;
+  top: 50vh;
+  width: 50vw;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  z-index: 1000;
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
-td.xyz-item-key {
-  vertical-align: top;
+#xyz-share-href {
+  background-color: rgb(240, 240, 240);
+  border-radius: 5px;
+  display: block;
+  width: 100%;
+  border-style: none;
+  padding: 4px;
+  height: 75px;
 }
 
-span.xyz-item-deselect {
-  font-size: 75%;
-  line-height: 30px;
-}
-
-span.xyz-item-deselect,
-span.xyz-item-maximize,
-span.xyz-item-minimize {
+#xyz-share-email,
+#xyz-share-copy,
+#xyz-share-cancel {
+  color: white;
+  border-style: none;
+  border-radius: 5px;
+  display: inline-block;
+  margin: 2px;
+  padding-left: 2px;
+  cursor: pointer;
+  padding-right: 2px;
+  word-break: break-all;
   float: right;
-  cursor: pointer;
-  margin-right: 5px;
 }
 
-span.xyz-item-deselect::before {
-  content: "\2715";
+#xyz-share-copy {
+  background-color: rgb(76, 175, 80);
 }
 
-span.xyz-item-maximize::before {
-  content: "\2610";
+#xyz-share-email {
+  background-color: rgb(76, 175, 80);
 }
 
-span.xyz-item-minimize::before {
-  content: "_";
-}
-
-table.xyz-item-minimized > thead {
-  cursor: pointer;
-}
-
-table.xyz-item-maximized span.xyz-item-maximize::before,
-table.xyz-item-minimized span.xyz-item-minimize::before {
-  content: "\2750";
-}
-
-table.xyz-item-maximized {
-  z-index: 100000 !important;
-  position: fixed !important;
-  height: 100vh !important;
-  width: 100vw !important;
-  top: 0 !important;
-  left: 0 !important;
-}
-
-table.xyz-item-maximized span.xyz-item-minimize,
-table.xyz-item-minimized span.xyz-item-maximize,
-table.xyz-item-minimized > tbody {
-  display: none !important;
+#xyz-share-cancel {
+  background-color: rgb(175, 76, 80);
 }
 table.xyz-create,
 table.xyz-item,
@@ -878,6 +871,70 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     /*box-shadow: 2px 2px 2px;*/
     background-color: white;
     padding: 10px;
+}table.xyz-item > tr.xyz-item-selected.xyz-item-header {
+  background-color: yellow;
+  color: black;
+}
+
+td.xyz-item-key {
+  vertical-align: top;
+}
+
+span.xyz-item-deselect {
+  font-size: 75%;
+  line-height: 30px;
+}
+
+span.xyz-item-deselect,
+span.xyz-item-maximize,
+span.xyz-item-minimize {
+  float: right;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+span.xyz-item-deselect::before {
+  content: "\2715";
+}
+
+span.xyz-item-maximize::before {
+  content: "\2610";
+}
+
+span.xyz-item-minimize::before {
+  content: "_";
+}
+
+table.xyz-item-minimized > thead {
+  cursor: pointer;
+}
+
+table.xyz-item-maximized span.xyz-item-maximize::before,
+table.xyz-item-minimized span.xyz-item-minimize::before {
+  content: "\2750";
+}
+
+table.xyz-item-maximized {
+  z-index: 100000 !important;
+  position: fixed !important;
+  height: 100vh !important;
+  width: 100vw !important;
+  top: 0 !important;
+  left: 0 !important;
+}
+
+table.xyz-item-maximized span.xyz-item-minimize,
+table.xyz-item-minimized span.xyz-item-maximize,
+table.xyz-item-minimized > tbody {
+  display: none !important;
+}
+
+.xyz-reference {
+    cursor: pointer;
+}
+
+.xyz-reference:hover {
+    background-color: lightblue;
 }.xyz-login a {
   color: blue;
   cursor: pointer;
@@ -912,12 +969,4 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .xyz-login-capslock-notifier {
   color: red;
-}
-
-.xyz-reference {
-    cursor: pointer;
-}
-
-.xyz-reference:hover {
-    background-color: lightblue;
 }
