--- a/factory/css/style.css
+++ b/factory/css/style.css
@@ -353,7 +353,8 @@ SHARE
 
 #xyz-share-email,
 #xyz-share-copy,
-#xyz-share-cancel {
+#xyz-share-cancel,
+.xyz-button-cancel {
   color: white;
   border-style: none;
   border-radius: 5px;
@@ -374,6 +375,31 @@ SHARE
   background-color: rgb(76, 175, 80);
 }
 
-#xyz-share-cancel {
+#xyz-share-cancel,
+.xyz-button-cancel {
   background-color: rgb(175, 76, 80);
+}
+
+#xyz-colorpicker {
+  position: fixed;
+  left: 50vw;
+  top: 50vh;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  max-width: 100vw;
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.xyz-colorpicker-color {
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+}
+
+.xyz-colorpicker-color:hover {
+  transform: scale(1.1, 1.1);
 }
