--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -523,6 +523,10 @@ tr.xyz-list-foldable.xyz-list-folded td:first-child::before {
   content: "\00A0+\00A0";
 }
 
+.xyz-list-unsorted::before {
+  content: "\00A0\21F5\00A0";
+}
+
 .xyz-list-sorted-asc::before {
   content: "\00A0\21E3\00A0";
 }
