--- a/engine/core/displays/map/map.css
+++ b/engine/core/displays/map/map.css
@@ -40,13 +40,16 @@
 .xyz-map-search {
   position: absolute;
   top: 0;
-  left: 80px;
-  width: calc(100% - 90px);
+  left: 100px;
+  width: calc(100% - 110px);
 }
 
 .xyz-map-search > input {
+  margin: 2px;
   border-radius: 5px;
-  border-style: none;
+  border-style: solid;
+  border-width: 1px;
+  border-color: lightgrey;
   padding: 4px;
   width: 100%;
 }
