--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -405,6 +405,63 @@ SHARE
 .xyz-colorpicker-color:hover {
   transform: scale(1.1, 1.1);
 }
+table.xyz-item > tr.xyz-item-selected.xyz-item-header {
+  background-color: yellow;
+  color: black;
+}
+
+td.xyz-item-key {
+  vertical-align: top;
+}
+
+span.xyz-item-deselect {
+  font-size: 75%;
+  line-height: 30px;
+}
+
+span.xyz-item-deselect,
+span.xyz-item-maximize,
+span.xyz-item-minimize {
+  float: right;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+span.xyz-item-deselect::before {
+  content: "\2715";
+}
+
+span.xyz-item-maximize::before {
+  content: "\2610";
+}
+
+span.xyz-item-minimize::before {
+  content: "_";
+}
+
+table.xyz-item-minimized > thead {
+  cursor: pointer;
+}
+
+table.xyz-item-maximized span.xyz-item-maximize::before,
+table.xyz-item-minimized span.xyz-item-minimize::before {
+  content: "\2750";
+}
+
+table.xyz-item-maximized {
+  z-index: 100000 !important;
+  position: fixed !important;
+  height: 100vh !important;
+  width: 100vw !important;
+  top: 0 !important;
+  left: 0 !important;
+}
+
+table.xyz-item-maximized span.xyz-item-minimize,
+table.xyz-item-minimized span.xyz-item-maximize,
+table.xyz-item-minimized > tbody {
+  display: none !important;
+}
 table.xyz-create,
 table.xyz-item,
 table.xyz-list {
@@ -548,13 +605,16 @@ tr.xyz-list-search > td > input {
 .xyz-map-search {
   position: absolute;
   top: 0;
-  left: 80px;
-  width: calc(100% - 90px);
+  left: 100px;
+  width: calc(100% - 110px);
 }
 
 .xyz-map-search > input {
+  margin: 2px;
   border-radius: 5px;
-  border-style: none;
+  border-style: solid;
+  border-width: 1px;
+  border-color: lightgrey;
   padding: 4px;
   width: 100%;
 }
@@ -581,63 +641,6 @@ tr.xyz-list-search > td > input {
 
 .xyz-map-search > div.xyz-map-search-results > div.xyz-map-search-result:hover {
   background-color: lightblue;
-}
-table.xyz-item > tr.xyz-item-selected.xyz-item-header {
-  background-color: yellow;
-  color: black;
-}
-
-td.xyz-item-key {
-  vertical-align: top;
-}
-
-span.xyz-item-deselect {
-  font-size: 75%;
-  line-height: 30px;
-}
-
-span.xyz-item-deselect,
-span.xyz-item-maximize,
-span.xyz-item-minimize {
-  float: right;
-  cursor: pointer;
-  margin-right: 5px;
-}
-
-span.xyz-item-deselect::before {
-  content: "\2715";
-}
-
-span.xyz-item-maximize::before {
-  content: "\2610";
-}
-
-span.xyz-item-minimize::before {
-  content: "_";
-}
-
-table.xyz-item-minimized > thead {
-  cursor: pointer;
-}
-
-table.xyz-item-maximized span.xyz-item-maximize::before,
-table.xyz-item-minimized span.xyz-item-minimize::before {
-  content: "\2750";
-}
-
-table.xyz-item-maximized {
-  z-index: 100000 !important;
-  position: fixed !important;
-  height: 100vh !important;
-  width: 100vw !important;
-  top: 0 !important;
-  left: 0 !important;
-}
-
-table.xyz-item-maximized span.xyz-item-minimize,
-table.xyz-item-minimized span.xyz-item-maximize,
-table.xyz-item-minimized > tbody {
-  display: none !important;
 }
 div.xyz-timeline-wrapper {
     position: relative;
@@ -958,13 +961,6 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     /*box-shadow: 2px 2px 2px;*/
     background-color: white;
     padding: 10px;
-}
-.xyz-reference {
-    cursor: pointer;
-}
-
-.xyz-reference:hover {
-    background-color: lightblue;
 }.xyz-login a {
   color: blue;
   cursor: pointer;
@@ -999,4 +995,12 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .xyz-login-capslock-notifier {
   color: red;
+}
+
+.xyz-reference {
+    cursor: pointer;
+}
+
+.xyz-reference:hover {
+    background-color: lightblue;
 }
