Add maxView size and searchPresets to map

--- a/engine/core/displays/map/map.css
+++ b/engine/core/displays/map/map.css
@@ -21,6 +21,13 @@
   display: none;
 }
 
+.ol-zoom-in:disabled,
+.ol-zoom-out:disabled,
+.ol-zoom-fit:disabled,
+.ol-rotate-reset:disabled {
+  background-color: darkgrey;
+}
+
 .xyz-map {
   position: relative;
 }
