--- a/custom/vanwieisamersfoort/content/style.css
+++ b/custom/vanwieisamersfoort/content/style.css
@@ -1,14 +1,16 @@
-#locatie,
-#eigenaar {
+#drilldown {
+  max-height: 50vh;
   background-color: white;
   position: fixed;
   z-index: 100;
   bottom: 0;
-  width: 50%;
+  right: 0;
 }
 
-#eigenaar {
-  right: 0;
+#locatiesBijEigenaar {
+  background-color: white;
+  max-height: 300px;
+  overflow-y: scroll;
 }
 
 #logo {
