--- a/engine/core/displays/list/list.css
+++ b/engine/core/displays/list/list.css
@@ -34,11 +34,16 @@ table.xyz-list > tbody > tr.xyz-list-selectable {
 
 table.xyz-list > tr.xyz-list-selectable:hover,
 table.xyz-list > tbody > tr.xyz-list-selectable:hover {
-  background-color: lightblue;
+  background-color: yellow;
 }
 
 table.xyz-list > tr.xyz-list-selected,
 table.xyz-list > tbody > tr.xyz-list-selected {
+  background-color: yellow;
+}
+
+table.xyz-list > tr.xyz-highlighted,
+table.xyz-list > tbody > tr.xyz-highlighted {
   background-color: yellow;
 }
 
